# SEBL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindSEBL.cmake
include/: bootparams.h
src/: uefi_bootparams.c  uefi_bootparams.h  uefi_elf.c  uefi_elf.h  uefi_main.c
